--- a/servers/common/catalog/catalog_db_editor.html
+++ b/servers/common/catalog/catalog_db_editor.html
@@ -36,5 +36,7 @@
 		<p>Click the <em>Save</em> button to save the schema and start enforcing it for new records in the collection. The JSON must be changed and valid for the <em>Save</em> button to enable.</p>
 		
 		<p>Click the <em>Revert</em> button to reset the text to the last schema saved to the database.</p>
+		
+		<p>Click the <em>Guess</em> button to have the editor create a basic JSON Schema based on the structure of the first record found in the collection. The generated schema is not automatically saved.</p>
   </div>
 </div>
