--- a/servers/common/catalog/catalog_db.html
+++ b/servers/common/catalog/catalog_db.html
@@ -34,10 +34,10 @@
   </ul>
   
   <h2>API</h2>
-	<h3>Factory functions</h3>
-  <p><code>uow.data.getDatabase(args) &rarr; dojo.Deferred</code></p>
+  <h3>Factory functions</h3>
+  <p><code>uow.getDatabase(args) &rarr; dojo.Deferred</code></p>
   <div class="apidesc">
-    <p>This method initializes the database interface for use in your application. You can call this function any number of times to get references to different databases and collections.</p>
+    <p>This method opens a database collection for use in your application. You can call this function any number of times to open connections to different databases and collections and with different modes of access (e.g., read, write, etc.)</p>
     <p>The <tt>args</tt> parameter must have the following attributes configuring your access to the database:</p>
   
     <dl>
@@ -46,26 +46,27 @@
       <dt>collection (string)</dt>
       <dd>Name of the collection in the database to access or * to list collections.</dd>
       <dt>mode (string)</dt>
-      <dd>Permissions requested for accessing the database. If mode is left undefined, <em>crud</em> is requested and granted for developers while non-developers get what they are allowed for the collection (see <tt>uow.data.setAccess</tt>). The mode string can contain one or more of the following characters representing permissions:
+      <dd>Permissions requested for accessing the database. If mode is left undefined, <em>crudO</em> is requested and granted for developers while non-developers get what they are allowed for the collection (see <tt>uow.data.setAccess</tt>). The mode string can contain one or more of the following characters representing permissions:
         <ul>
           <li>c : Create records</li>
           <li>r : Read records with any query</li>
-          <li>R : Restricted read that allows only simple equality queries that return a single record.
+          <li>R : Restricted read that allows only simple equality queries that return a single record
           <li>u : Update existing records</li>
           <li>d : Delete records</li>
+          <li>O : Override ownership checks on item operations</li> 
         </ul>
       </ds>
     </dl>
   
     <p>The return value is a <tt><a href="http://www.dojotoolkit.org/reference-guide/dojo/Deferred.html">dojo.Deferred</a></tt>. You should invoke <tt>then</tt> on the deferred to register a callback function that will receive a <tt>uow.data.MongoStore</tt> instance for your use.</p>
 
-		<p><strong>Note:</strong> The modes granted may not match the modes requested. The intersection depends on the permissions allowed for the user role using <tt>uow.data.setAccess</tt> or an equivalent function. You can invoke the <tt>getMode</tt> method on the <tt>uow.data.MongoStore</tt> instance to determine what permissions were actually granted.</p>
+    <p><strong>Note:</strong> The modes granted may not match the modes requested. The intersection depends on the permissions allowed for the user role using <tt>uow.data.setAccess</tt> or an equivalent function. You can invoke the <tt>getMode</tt> method on the <tt>uow.data.MongoStore</tt> instance to determine what permissions were actually granted.</p>
   </div>
 
-	<p><code>uow.data.manageDatabase(args) &rarr; dojo.Deferred</code></p>
+  <p><code>uow.data.manageDatabase(args) &rarr; dojo.Deferred</code></p>
   <div class="apidesc">
-    <p>This method allows you to list and delete the collections in a database. You can call this function any number of times to get references to different databases.</p>
-    <p>The <tt>args</tt> parameter must have the following attributes identifying which database you want to manage:</p>
+    <p>This method allows you to list and delete the collections in a database. You can call this function any number of times to manage different databases.</p>
+    <p>The <tt>args</tt> parameter must have the following attribute identifying which database you want to manage:</p>
   
     <dl>
       <dt>database (string)</dt>
@@ -75,7 +76,7 @@
     <p>The return value is a <tt><a href="http://www.dojotoolkit.org/reference-guide/dojo/Deferred.html">dojo.Deferred</a></tt>. You should invoke <tt>then</tt> on the deferred to register a callback function that will receive a <tt>uow.data.MongoStore</tt> instance with delete and read permissions for your use in listing and dropping collections in the database.</p>
   </div>
 
-	<p><code>uow.data.setAccess(args) &rarr; dojo.Deferred</code></p>
+  <p><code>uow.data.setAccess(args) &rarr; dojo.Deferred</code></p>
   <div class="apidesc">
     <p>This function sets the permissions allowed for a user role when accessing a given database and collection. Only those permissions allowed here will be granted to a user in the named role when accessing the database / collection pair using <tt>uow.data.getDatabase</tt>.</p>
     <p>The <tt>args</tt> parameter must have the following attributes identifying the database, collection, and user role to configure:</p>
@@ -83,34 +84,34 @@
     <dl>
       <dt>database (string)</dt>
       <dd>Name of the database.</dd>
-			<dt>collection (string)</dt>
-			<dd>Name of the collection on which to set the allowed permissions.</dd>
-			<dt>role (string)</dt>
-			<dd>User role name on which to set the allowed permissions.</dd>
-			<dt>permission (string)</dt>
-			<dd>Permission to allow user's of the role to request. The permission string can contain one or more of the <em>mode</em> characters defined for the <tt>uow.data.getDatabase</tt> function. Alternatively, it can be <tt>null</tt> to remove all granted permissions.</dd>
+      <dt>collection (string)</dt>
+      <dd>Name of the collection on which to set the allowed permissions.</dd>
+      <dt>role (string)</dt>
+      <dd>User role name on which to set the allowed permissions.</dd>
+      <dt>permission (string)</dt>
+      <dd>Permission to allow user's of the role to request. The permission string can contain one or more of the <em>mode</em> characters defined for the <tt>uow.data.getDatabase</tt> function. Alternatively, it can be <tt>null</tt> to remove all granted permissions.</dd>
     </dl>
   
     <p>The return value is a <tt><a href="http://www.dojotoolkit.org/reference-guide/dojo/Deferred.html">dojo.Deferred</a></tt>. You should invoke <tt>then</tt> on the deferred to register a callback function that will receive the record created, updated, or deleted in the <tt>Admin:AccessModes</tt> collection defining the allowed permission.</p>
   </div>
 
-	<p><code>uow.data.setRole(args) &rarr; dojo.Deferred</code></p>
+  <p><code>uow.data.setRole(args) &rarr; dojo.Deferred</code></p>
   <div class="apidesc">
     <p>This function assigns a associates a user's Open ID with a role. The association exists across all databases and collections on the server.</p>
 
     <p>The <tt>args</tt> parameter must have the following attributes identifying the user and role:</p>
   
     <dl>
-			<dt>user (string)</dt>
-			<dd>Open ID (i.e., email address) of the user</dd> 
-			<dt>role (string)</dt>
-			<dd>One of the assigned role names defined by <tt>uow.getUser</tt>, namely <tt>author</tt> or <tt>admin</tt>, or <tt>null</tt> to remove the user / role association.</dd>
+      <dt>user (string)</dt>
+      <dd>Open ID (i.e., email address) of the user</dd> 
+      <dt>role (string)</dt>
+      <dd>One of the assigned role names defined by <tt>uow.getUser</tt>, namely <tt>author</tt> or <tt>admin</tt>, or <tt>null</tt> to remove the user / role association.</dd>
     </dl>
   
     <p>The return value is a <tt><a href="http://www.dojotoolkit.org/reference-guide/dojo/Deferred.html">dojo.Deferred</a></tt>. You should invoke <tt>then</tt> on the deferred to register a callback function that will receive the record created, updated, or deleted in the <tt>Admin:AccessUsers</tt> collection defining the role association.</p>
   </div>
 
-	<p><code>uow.data.setSchema(args) &rarr; dojo.Deferred</code></p>
+  <p><code>uow.data.setSchema(args) &rarr; dojo.Deferred</code></p>
   <div class="apidesc">
     <p>This function sets the <a href="http://jsonschema.org">JSON Schema</a> for all future records in a given collection. When a schema exists, only those operations that produce items deemed valid by the schema are allowed. All other operations are denied.</p>
 
@@ -119,57 +120,105 @@
     <dl>
       <dt>database (string)</dt>
       <dd>Name of the database.</dd>
-			<dt>collection (string)</dt>
-			<dd>Name of the collection.</dd>
-			<dt>schema (string)</dt>
-			<dd>JSON schema to enforce for future record creation and updates or <tt>null</tt> to remove the schema and allow items with arbitrary structure in the collection.</dd>
+      <dt>collection (string)</dt>
+      <dd>Name of the collection.</dd>
+      <dt>schema (string)</dt>
+      <dd>JSON schema to enforce for future record creation and updates or <tt>null</tt> to remove the schema and allow items with arbitrary structure in the collection.</dd>
     </dl>
   
     <p>The return value is a <tt><a href="http://www.dojotoolkit.org/reference-guide/dojo/Deferred.html">dojo.Deferred</a></tt>. You should invoke <tt>then</tt> on the deferred to register a callback function that will receive the record created, updated, or deleted in the <tt>Admin:Schemas</tt> collection defining the schema.</p>
   </div>
 
-	<p><code>uow.data.touchCollection(args) &rarr; dojo.Deferred</code></p>
+  <p><code>uow.data.touchCollection(args) &rarr; dojo.Deferred</code></p>
   <div class="apidesc">
-    <p>This method creates a new, empty collection in a database. Normally, you do not need to invoke this function as the collection is brought into existence when you write the first record to it. This function is useful, however, if you need a collection to appear when fetched using <tt>uow.data.manageDatabase</tt>.</p>
+    <p>This function creates a new, empty collection in a database. Normally, you do not need to invoke this function as the collection is brought into existence when you write the first record to it. This function is useful, however, if you need a collection to appear when fetched using <tt>uow.data.manageDatabase</tt>.</p>
     <p>The <tt>args</tt> parameter must have the following attributes identifying the collection to create:</p>
   
     <dl>
       <dt>database (string)</dt>
       <dd>Name of the database to access.</dd>
-			<dt>collection (string)</dt>
-			<dd>Name of the collection to create.</dd>
+      <dt>collection (string)</dt>
+      <dd>Name of the collection to create.</dd>
     </dl>
   
     <p>The return value is a <tt><a href="http://www.dojotoolkit.org/reference-guide/dojo/Deferred.html">dojo.Deferred</a></tt>. You should invoke <tt>then</tt> on the deferred to register a callback function that will receive a <tt>uow.data.MongoStore</tt> instance for the new collection with <em>crud</em> permissions.</p>
   </div>
 
-	<h3>uow.data.MongoStore class</h3>
-	<p>The <tt>MongoStore</tt> is a subclass of <a href="http://docs.dojocampus.org/dojox/data/JsonRestStore"><tt>dojox.data.JsonRestStore</tt></a> which implements the read, write, identity, and notification interfaces of <a href="http://www.dojotoolkit.org/reference-guide/dojo/data/api.html">dojo.data</a>. <tt>MongoStore</tt> instances expose additional methods beyond those defined by the basic dojo.data interfaces. These convenience methods are listed below.</p>
-	
-	<p><code>deleteOne(args) &rarr; dojo.Deferred</code></p>
+  <h3>uow.data.MongoStore class</h3>
+  <p><tt>MongoStore</tt> is a subclass of <a href="http://docs.dojocampus.org/dojox/data/JsonRestStore"><tt>dojox.data.JsonRestStore</tt></a> which implements the read, write, identity, and notification interfaces of <a href="http://www.dojotoolkit.org/reference-guide/dojo/data/api.html">dojo.data</a>. <tt>MongoStore</tt> instances expose additional methods beyond those defined by the basic dojo.data interfaces. These convenience methods are listed below.</p>
+  
+  <p><code>deleteOne(args) &rarr; dojo.Deferred</code></p>
   <div class="apidesc">
-    <p>todo</p>
-	</div>
+    <p>This method deletes one and only one record matching a query from the open collection.</p>
 
-	<p><code>fetchOne(args) &rarr; dojo.Deferred</code></p>
-  <div class="apidesc">
-    <p>todo</p>
-	</div>
+     <p>The <tt>args</tt> parameter must have the following attributes identifying the item to delete:</p>
+  
+    <dl>
+      <dt>query (object)</dt>
+      <dd>Name / value properties to match when searching for the item</dd>
+      <dt>save (bool)</dt>
+      <dd>True to commit the deletion to the server if successful, false to only perform the delete locally until a later <tt>save()</tt></dd>
+    </dl>
 
-	<p><code>getMode() &rarr; string</code></p>
-  <div class="apidesc">
-    <p>todo</p>
-	</div>
+    <p>The return value is a <tt><a href="http://www.dojotoolkit.org/reference-guide/dojo/Deferred.html">dojo.Deferred</a></tt>. You should invoke <tt>then</tt> on the deferred to register a callback function that will receive the deleted item or an error if zero or more than one items match the query.</p>
+  </div>
 
-	<p><code>putOne(args) &rarr; dojo.Deferred</code></p>
+  <p><code>fetchOne(args) &rarr; dojo.Deferred</code></p>
   <div class="apidesc">
-    <p>todo</p>
-	</div>
+    <p>This method gets one and only one record matching a query from the open collection.</p>
 
-	<p><code>updateOne(args) &rarr; dojo.Deferred</code></p>
+   <p>The <tt>args</tt> parameter must have the following attributes identifying the item to fetch:</p>
+  
+    <dl>
+      <dt>query (object)</dt>
+      <dd>Name / value properties to match when searching for the item</dd>
+    </dl>
+
+    <p>The return value is a <tt><a href="http://www.dojotoolkit.org/reference-guide/dojo/Deferred.html">dojo.Deferred</a></tt>. You should invoke <tt>then</tt> on the deferred to register a callback function that will receive the matching item or an error if zero or more than one items match the query.</p>
+  </div>
+
+  <p><code>getMode() &rarr; string</code></p>
   <div class="apidesc">
-    <p>todo</p>
-	</div>
+    <p>This method returns the permissions actually granted on the opened collection. It takes no parameters.</p>
+
+    <p>The return value is a string containing a subset of the mode characters <em>crRudO</em> defined in the <tt>uow.data.getDatabase</tt> documentation above.</p>
+  </div>
+
+  <p><code>putOne(args) &rarr; dojo.Deferred</code></p>
+  <div class="apidesc">
+    <p>This method updates one and only one record matching a query in the open collection or creates it if no records match.</p>
+
+     <p>The <tt>args</tt> parameter must have the following attributes identifying the item to update or create:</p>
+  
+    <dl>
+      <dt>query (object)</dt>
+      <dd>Name / value properties to match when searching for the item</dd>
+      <dt>data (object)</dt>
+      <dd>Name / value properties to replace or add to the exiting item, or the properties to include (along with the query properties) on the newly created item</dd>
+      <dt>save (bool)</dt>
+      <dd>True to commit the update or creation to the server if successful, false to only perform the update / create locally until a later <tt>save()</tt></dd>
+    </dl>
+
+    <p>The return value is a <tt><a href="http://www.dojotoolkit.org/reference-guide/dojo/Deferred.html">dojo.Deferred</a></tt>. You should invoke <tt>then</tt> on the deferred to register a callback function that will receive the updated or created item or an error if more than one items match the query.</p>
+  </div>
+
+  <p><code>updateOne(args) &rarr; dojo.Deferred</code></p>
+  <div class="apidesc">
+    <p>This method updates one and only one record matching a query from the open collection.</p>
+
+   <p>The <tt>args</tt> parameter must have the following attributes identifying the item to update:</p>
+  
+    <dl>
+      <dt>query (object)</dt>
+      <dd>Name / value properties to match when searching for the item</dd>
+      <dt>data (object)</dt>
+      <dd>Name / value properties to replace or add to the exiting item</dd>
+      <dt>save (bool)</dt>
+      <dd>True to commit the update to the server if successful, false to only perform the update locally until a later <tt>save()</tt></dd>
+    </dl>
+
+    <p>The return value is a <tt><a href="http://www.dojotoolkit.org/reference-guide/dojo/Deferred.html">dojo.Deferred</a></tt>. You should invoke <tt>then</tt> on the deferred to register a callback function that will receive the updated item or an error if zero or more than one items match the query.</p>
+  </div>
 
   <h2>Examples</h2>
   <h3>Save a new person object in the <em>rolodex</em> collection of the <em>catalog</em> database</h3>
