--- a/servers/common/catalog/catalog_changelog.html
+++ b/servers/common/catalog/catalog_changelog.html
@@ -1,3 +1,13 @@
 <div id="changelogContainer" class="catChangelog catPage">
 	<h1>Changelog</h1>
+	<h2>v2</h2>
+	<ul>
+	  <li>Record ownership. The last user to create or modify a record is marked as its owner. Only the owner (or a developer) can create, update, or delete the record thereafter unless ownership override is granted.</li>
+	  <li>New mode <em>O</em> for overriding ownership checks on database records.</li>
+	  <li>New database factory methods <tt>manageDatabase</tt>, <tt>setAccess</tt>, <tt>setMode</tt>, <tt>setSchema</tt>, and <tt>touchCollection</tt>.</li>
+	  <li>New <tt>MongoStore</tt> methods <tt>deleteOne</tt>, <tt>fetchOne</tt>, <tt>getMode</tt>, <tt>putOne</tt>, and <tt>updateOne</tt>.</li>
+	  <li>The start of GUI editors for user roles, collection data, collection permissions, and collection schemas.</li>
+	</ul>
+	<h2>v1</h2>
+	<p>Everything before this changelog started.</p>
 </div>
