--- a/servers/common/catalog/index.html
+++ b/servers/common/catalog/index.html
@@ -125,7 +125,7 @@
              href="catalog_changelog.html"></div>
       </div>
       <div dojoType="dijit.layout.ContentPane" region="bottom" splitter="false">
-        Updated 10/11/10 - <a href="#changelog">Changelog</a>
+        v2 - <a href="#changelog">Changelog</a>
       </div>
     </div>
   </body>
