Double dots give crazy message.

--- a/catalog/catalog_db.html
+++ b/catalog/catalog_db.html
@@ -233,7 +233,7 @@
   <button id="db_ex1">Run</button></label>
   <div id="db_ex1code">
     <pre><code dojoType="dojox.highlight.Code"
->var def = uow..data.getDatabase({
+>var def = uow.data.getDatabase({
   database: 'catalog', 
   collection : 'rolodex', 
   mode : 'c'
