Issue #22, add checkBrowser to changelog

--- a/catalog/catalog_changelog.html
+++ b/catalog/catalog_changelog.html
@@ -1,5 +1,9 @@
 <div id="changelogContainer" class="catChangelog catPage">
 	<h1>Changelog</h1>
+	<h2>v3</h2>
+	<ul>
+	  <li>Added <tt>uow.checkBrowser() to test and warn about browser incompatibility.</tt>
+	</ul>
 	<h2>v2</h2>
 	<ul>
 	  <li>Record ownership. The user who creates a record is marked as its owner. Only the owner may update or delete the record thereafter unless ownership override permission is granted.</li>
