Add upload to change log.

--- a/catalog/catalog_changelog.html
+++ b/catalog/catalog_changelog.html
@@ -7,6 +7,7 @@
 	  <li>New database factory methods <tt>manageDatabase</tt>, <tt>setAccess</tt>, <tt>setMode</tt>, <tt>setSchema</tt>, and <tt>touchCollection</tt>.</li>
 	  <li>New <tt>MongoStore</tt> methods <tt>deleteOne</tt>, <tt>fetchOne</tt>, <tt>getMode</tt>, <tt>putOne</tt>, and <tt>updateOne</tt>.</li>
 	  <li>The start of GUI editors for user roles, collection data, collection permissions, and collection schemas.</li>
+	  <li>Image and Audio upload enabled.</li>
 	</ul>
 	<h2>v1</h2>
 	<p>Everything before this changelog started.</p>
