Update the db doc and change log to reflect the record sanitizing.

--- a/catalog/catalog_changelog.html
+++ b/catalog/catalog_changelog.html
@@ -4,6 +4,7 @@
 	<ul>
 	  <li>Added <tt>uow.checkBrowser() to test and warn about browser incompatibility.</tt>
 	  <li>Image and Audio upload enabled.</li>
+	  <li>Strings in the database are filtered to avoid common XSS attacks.</li>
 	</ul>
 	<h2>v2</h2>
 	<ul>
