--- a/catalog/catalog_changelog.html
+++ b/catalog/catalog_changelog.html
@@ -1,10 +1,15 @@
 <div id="changelogContainer" class="catChangelog catPage">
 	<h1>Changelog</h1>
+	<h2>v4</h2>
+	<ul>
+	  <li>Added <tt>uow.ui.showBusy()</tt> and <tt>uow.ui.hideBusy()</tt>.</li>
+	  <li>Renamed <tt>uow.checkBrowser()</tt> to <tt>uow.ui.checkBrowser()</tt>.</li>
+	</ul>
 	<h2>v3</h2>
 	<ul>
-	  <li>Added <tt>uow.checkBrowser() to test and warn about browser incompatibility.</tt>
 	  <li>Image and Audio upload enabled.</li>
 	  <li>Strings in the database are filtered to avoid common XSS attacks.</li>
+	  <li>Added <tt>uow.checkBrowser()</tt> to test and warn about browser incompatibility.</li>
 	</ul>
 	<h2>v2</h2>
 	<ul>
