--- a/catalog/index.html
+++ b/catalog/index.html
@@ -47,6 +47,7 @@
           <li>Audio</li>
           <li>Authentication</li>
           <li>Database</li>
+          <li>UI Widgets</li>
           <li>Dojo Trace</li>
           <div id="tools" style="display: none;">
             <h2>Tools</h2>
@@ -103,6 +104,12 @@
              href="catalog_db.html"></div>
         <div dojoType="dojox.layout.ContentPane" 
              class="doc"
+             id="ui"
+             title="UI Widgets" 
+             preload="true"
+             href="catalog_ui.html"></div>
+        <div dojoType="dojox.layout.ContentPane" 
+             class="doc"
              id="trace"
              title="Dojo Trace" 
              preload="true"
@@ -125,7 +132,7 @@
              href="catalog_changelog.html"></div>
       </div>
       <div dojoType="dijit.layout.ContentPane" region="bottom" splitter="false">
-        v3 - <a href="#changelog">Changelog</a>
+        v4 - <a href="#changelog">Changelog</a>
       </div>
     </div>
   </body>
