--- a/catalog/catalog_auth.html
+++ b/catalog/catalog_auth.html
@@ -3,9 +3,9 @@
     dojo.ready(function() {
       uow.app.catalog.parseExamples('authContainer');
       uow.getUser()
-      .addCallback(function(user) {
+      .then(function(user) {
           uow.app.catalog.serviceStatus('Authentication', true);
-      }).addErrback(function(user) {
+      }, function(user) {
           uow.app.catalog.serviceStatus('Authentication', false);
       });      
     });
@@ -18,7 +18,7 @@
   <div class="apidesc">
     <p>This method retrieves information about the user logged into the current domain.</p>
   
-    <p>The return value is a <tt><a href="http://www.dojotoolkit.org/reference-guide/dojo/Deferred.html">dojo.Deferred</a></tt>. You should invoke <tt>addCallback</tt> on the deferred to register a callback function that will receive a object with the following properties:</p>
+    <p>The return value is a <tt><a href="http://www.dojotoolkit.org/reference-guide/dojo/Deferred.html">dojo.Deferred</a></tt>. You should invoke <tt>then</tt> on the deferred to register a callback function that will receive a object with the following properties:</p>
   
     <dl>
       <dt>email (string)</dt>
@@ -60,7 +60,7 @@
   <div class="apidesc">
     <p>This method attempts to authenticate the current user via a Google Account. A popup window appears in which Google asks the user to create a new Google Account or sign into an existing account if the user is not currently signed into any Google service. Once signed in, the popup windows asks the user to allow or deny the UOW server access to his or her name, email address, etc. for authentication.</p>
   
-    <p>The return value is a <tt><a href="http://www.dojotoolkit.org/reference-guide/dojo/Deferred.html">dojo.Deferred</a></tt>. You should invoke <tt>addCallback</tt> on the deferred to register a callback function that will receive a object with the following properties:</p>
+    <p>The return value is a <tt><a href="http://www.dojotoolkit.org/reference-guide/dojo/Deferred.html">dojo.Deferred</a></tt>. You should invoke <tt>then</tt> on the deferred to register a callback function that will receive a object with the following properties:</p>
   
     <dl>
       <dt>flag (string)</dt>
@@ -77,7 +77,7 @@
   <div id="auth_ex1code">
     <pre><code dojoType="dojox.highlight.Code"
 >var def = uow.getUser();
-def.addCallback(function(user) {
+def.thenk(function(user) {
   var text = dojo.toJson(user);
   dojo.byId('auth_ex1log').innerHTML = text;
 });
