--- a/catalog/catalog_changelog.html
+++ b/catalog/catalog_changelog.html
@@ -3,7 +3,7 @@
 	<h2>v4</h2>
 	<ul>
 	  <li>Added <a href="#ui">UI Widgets</a> documentation page with examples.</li>
-	  <li>Suggested use of <tt>uow.data.getDatabase</tt> instead of <tt>uow.data.manageDatabase</tt></li>
+	  <li>Suggested use of <tt>uow.data.getDatabase</tt> instead of <tt>uow.getDatabase</tt></li>
 	  <li>Added <tt>uow.ui.showBusy()</tt> and <tt>uow.ui.hideBusy()</tt>.</li>
 	  <li>Renamed <tt>uow.checkBrowser()</tt> to <tt>uow.ui.checkBrowser()</tt>.</li>
 	</ul>
