Added missing starting step about mac mimetypes file

--- a/catalog/catalog_start.html
+++ b/catalog/catalog_start.html
@@ -71,6 +71,8 @@
     <ol>
       <li>Move the config file you generated into place:<br/>
         <code>sudo mv ~/Downloads/nginx.conf /opt/local/etc/nginx/nginx.conf</code></li>
+      <li>Move the default mimetypes file into place:<br/>
+        <code>sudo mv /opt/local/etc/nginx/mime.types.example /opt/local/etc/nginx/mime.types</code>
       <li>Make sure Apache is disabled on your Mac by going to Apple menu -> System Preferences -> Sharing and unchecking the Web Sharing box.</li>
     </ol>
 
